@@ -54,4 +54,5 @@
     <string name="settings_category_backup">Backup</string>
     <string name="settings_automatic_backup">Automatic backup</string>
     <string name="settings_backup_path">Backup path</string>
+    <string name="widget_start_stop">Toggle tracking</string>
 </resources>
